[package]
name = "backend-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.4.4"
axum-macros = "0.1.2"
tower = { version = "0.4.8", features = ["util", "timeout"] }
tower-http = { version = "0.2.2", features = ["full"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
openssl = { version = "0.10.32", features = ["vendored"] }
serde_json = "1.0.79"
serde_path_to_error = "0.1"

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.3"
